Add comprehensive test cases for academic year, class management, admin schedule, and SDQ assessment functionalities
- Implemented test cases for adding, editing, and deleting academic years in robot-03-year.robot.
- Added test cases for class management including successful and unsuccessful scenarios in robot-04-class.robot.
- Created initial structure for admin schedule management in robot-05-admin-scedule.robot.
- Developed SDQ assessment test cases for teachers in robot-06-teacher_sdq.robot, covering both successful submissions and error handling.

--- a/tests/report.html
+++ b/tests/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,28647],[],[[5,0,6,[7],[0,1665,26976,8],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,51076],[],[[5,0,6,[7,8],[0,1877,49197,9],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Robot-02-Personnel","*D:\\Coding Works\\Robot UV\\tests\\robot-02-personnel.robot","*robot-02-personnel.robot","*<p>ชุดการทดสอบสำหรับระบบจัดการข้อมูลบุคลากร (Personnel Management) ครอบคลุมการทดสอบฟังก์ชันเพิ่มบุคลากรใหม่ และการตรวจสอบความถูกต้องของข้อมูล (Validation) บนฟอร์ม\x3c/p>","*TC14001 - Add New Personnel Successfully","*<p>Test case to add new personnel with valid data\x3c/p>","*add, smoke, positive, personnel, regression","*Element 'xpath=//input[@type=\"email\"]' not visible after 5 seconds."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Robot-02-Personnel","*D:\\Coding Works\\Robot UV\\tests\\robot-02-personnel.robot","*robot-02-personnel.robot","*<p>ชุดการทดสอบสำหรับระบบจัดการข้อมูลบุคลากร (Personnel Management) ครอบคลุมการทดสอบฟังก์ชันเพิ่มบุคลากรใหม่ และการตรวจสอบความถูกต้องของข้อมูล (Validation) บนฟอร์ม\x3c/p>","*TC14002 - Add New Personnel without selecting prefix","*<p>Test case to add new personnel without selecting prefix\x3c/p>","*negative","*none_prefix","*Text 'เพิ่มข้อมูลครูที่ปรึกษาเรียบร้อย' did not appear in 10 seconds."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:27","fail":1,"label":"All Tests","pass":0,"skip":0}],[{"elapsed":"00:00:27","fail":1,"label":"add, smoke, positive, personnel, regression","pass":0,"skip":0}],[{"elapsed":"00:00:29","fail":1,"id":"s1","label":"Robot-02-Personnel","name":"Robot-02-Personnel","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:49","fail":1,"label":"All Tests","pass":0,"skip":0}],[{"elapsed":"00:00:49","fail":1,"label":"negative","pass":0,"skip":0},{"elapsed":"00:00:49","fail":1,"label":"none_prefix","pass":0,"skip":0}],[{"elapsed":"00:00:51","fail":1,"id":"s1","label":"Robot-02-Personnel","name":"Robot-02-Personnel","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1758040341729;
+window.output["baseMillis"] = 1758563297662;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 28743;
+window.output["generated"] = 51203;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
