Add Robot Framework test case for editing personnel information
- Implemented test case TC1411 to verify successful editing of personnel details.
- Added keywords for interacting with form fields including prefix, first name, last name, phone number, and status dropdown.
- Included steps for browser interaction such as opening the browser, maximizing the window, and handling login via Google OAuth.
- Captured screenshots upon successful completion of the test case.
- Organized keywords for better readability and reusability.

--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,43317],[],[[5,0,6,[],[0,1315,41980,7],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,30685],[],[[5,0,6,[],[0,820,29863,7],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Robot-06-Teacher Sdq","*d:\\Coding Works\\Robot UV\\tests\\robot-06-teacher_sdq.robot","*tests/robot-06-teacher_sdq.robot","*<p>ฟังก์ชั่นแบบฟอร์มประเมิน SDQ (คุณครู)\x3c/p>","*TC9001 - คุณครูทำแบบประเมิน SDQ ประเมินนักเรียนสำเร็จ","*<p>ทดสอบการประเมิน SDQ ของคุณครู\x3c/p>","*Element with locator 'xpath=//*[@id=\"root\"]/div[2]/div/div[4]/div/table/tbody/tr[6]/td[1]' not found."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Robot-02-Personnel","*D:\\Coding Works\\Robot UV\\tests\\robot-02-personnel.robot","*tests/robot-02-personnel.robot","*<p>ชุดการทดสอบสำหรับระบบจัดการข้อมูลบุคลากร (Personnel Management)\x3c/p>","*TC1411 Edit Personnel Successfully","*<p>Test case to edit personnel information successfully\x3c/p>","*The text of element 'id:first_name' should have been 'สมสมร' but it was ''."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:42","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:43","fail":1,"id":"s1","label":"Robot-06-Teacher Sdq","name":"Robot-06-Teacher Sdq","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:30","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:31","fail":1,"id":"s1","label":"Robot-02-Personnel","name":"Robot-02-Personnel","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1760009168528;
+window.output["baseMillis"] = 1761416402735;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 43406;
+window.output["generated"] = 30745;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
