Refactor code structure for improved readability and maintainability

--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,30685],[],[[5,0,6,[],[0,820,29863,7],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,67657],[],[[5,0,6,[],[0,1292,66363,7],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Robot-02-Personnel","*D:\\Coding Works\\Robot UV\\tests\\robot-02-personnel.robot","*tests/robot-02-personnel.robot","*<p>ชุดการทดสอบสำหรับระบบจัดการข้อมูลบุคลากร (Personnel Management)\x3c/p>","*TC1411 Edit Personnel Successfully","*<p>Test case to edit personnel information successfully\x3c/p>","*The text of element 'id:first_name' should have been 'สมสมร' but it was ''."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Robot-04-Class","*D:\\Coding Works\\Robot UV\\tests\\robot-04-class.robot","*tests/robot-04-class.robot","*<p>ฟังก์ชั่นการจัดการข้อมูลชั้นเรียน (Class Management)\x3c/p>","*TC1701 - เจ้าหน้าที่ฝ่ายทะเบียนเพิ่มชั้นเรียนสำเร็จ","*<p>ทดสอบการเพิ่มชั้นเรียนใหม่\x3c/p>","*ProtocolError: ('Connection aborted.', ConnectionResetError(10054, 'An existing connection was forcibly closed by the remote host', None, 10054, None))"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:30","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:31","fail":1,"id":"s1","label":"Robot-02-Personnel","name":"Robot-02-Personnel","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:01:06","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:01:08","fail":1,"id":"s1","label":"Robot-04-Class","name":"Robot-04-Class","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1761416402735;
+window.output["baseMillis"] = 1761479419183;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 30745;
+window.output["generated"] = 67740;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
