Add Robot Framework test case for successful home visit data entry
- Implemented test case TC1301 to verify the successful submission of home visit data by teachers.
- Included steps for browser interaction, login via Google OAuth, and file upload for house and family photos.
- Added keywords for year selection and screenshot capturing with timestamped filenames.
- Created necessary variables for file paths and element locators.

--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,67657],[],[[5,0,6,[],[0,1292,66363,7],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,47089],[],[[5,0,6,[],[0,830,46257,7],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Robot-04-Class","*D:\\Coding Works\\Robot UV\\tests\\robot-04-class.robot","*tests/robot-04-class.robot","*<p>ฟังก์ชั่นการจัดการข้อมูลชั้นเรียน (Class Management)\x3c/p>","*TC1701 - เจ้าหน้าที่ฝ่ายทะเบียนเพิ่มชั้นเรียนสำเร็จ","*<p>ทดสอบการเพิ่มชั้นเรียนใหม่\x3c/p>","*ProtocolError: ('Connection aborted.', ConnectionResetError(10054, 'An existing connection was forcibly closed by the remote host', None, 10054, None))"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Robot-07-Teacher-Visit","*D:\\Coding Works\\Robot UV\\tests\\robot-07-teacher-visit.robot","*tests/robot-07-teacher-visit.robot","*<p>ฟังก์ชันการจัดการข้อมูลการเยี่ยมบ้านนักเรียน\x3c/p>","*TC1301 - คุณครูกรอกข้อมูลการเยี่ยมบ้านสำเร็จ","*<p>ทดสอบการกรอกข้อมูลการเยี่ยมบ้านสำเร็จ\x3c/p>","*Invalid log level 'TIMEOUT=10S'."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:06","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:01:08","fail":1,"id":"s1","label":"Robot-04-Class","name":"Robot-04-Class","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:46","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:47","fail":1,"id":"s1","label":"Robot-07-Teacher-Visit","name":"Robot-07-Teacher-Visit","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1761479419183;
+window.output["baseMillis"] = 1761532054509;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 67740;
+window.output["generated"] = 47135;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
