Refactor code structure and remove redundant sections for improved readability and maintainability

--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,47089],[],[[5,0,6,[],[0,830,46257,7],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,70072],[],[[5,0,6,[],[1,1040,69031],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Robot-07-Teacher-Visit","*D:\\Coding Works\\Robot UV\\tests\\robot-07-teacher-visit.robot","*tests/robot-07-teacher-visit.robot","*<p>ฟังก์ชันการจัดการข้อมูลการเยี่ยมบ้านนักเรียน\x3c/p>","*TC1301 - คุณครูกรอกข้อมูลการเยี่ยมบ้านสำเร็จ","*<p>ทดสอบการกรอกข้อมูลการเยี่ยมบ้านสำเร็จ\x3c/p>","*Invalid log level 'TIMEOUT=10S'."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Robot-02-Personnel","*D:\\Coding Works\\Robot UV\\tests\\robot-02-personnel.robot","*tests/robot-02-personnel.robot","*<p>ชุดการทดสอบสำหรับระบบจัดการข้อมูลบุคลากร (Personnel Management)\x3c/p>","*TC1405 เจ้าหน้าที่ฝ่ายทะเบียนลบบัญชีคุณครูที่ปรึกษาสำเร็จ","*<p>ทดสอบการลบบัญชีคุณครูที่ปรึกษาโดยเจ้าหน้าที่ฝ่ายทะเบียนสำเร็จ\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:46","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:47","fail":1,"id":"s1","label":"Robot-07-Teacher-Visit","name":"Robot-07-Teacher-Visit","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:01:09","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:01:10","fail":0,"id":"s1","label":"Robot-02-Personnel","name":"Robot-02-Personnel","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1761532054509;
+window.output["baseMillis"] = 1761738119961;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 47135;
+window.output["generated"] = 70139;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
